--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
       color: black;
     }
     header {
-      position: fixed;
+      position: absolute;
       width: 100%;
       top: 0;
       right: 0;
