--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="home-text">
       <h2> Izyan Farhana </h2>
       <h3>Student</h3>
-      <p>I'm a student based in Sarawak and I'm very passionate and dedicated to my work.</p>
+      <p>Yo! I'm a student based in Sarawak. Lets keep in touch by connecting with my socials below</p>
       <div class="socials-icons">
         <a href="https://www.instagram.com/yanprsh/"><i class="ph-bold ph-instagram-logo"></i></a>
         <a href="https://www.linkedin.com/in/izyan-farhana/"><i class="ph-bold ph-linkedin-logo"></i></a>
