--- a/portfolio.html
+++ b/portfolio.html
@@ -123,8 +123,8 @@ body {
       <ul class="navmenu">
         <li><a href="index.html">Home</a></li>
         <li><a href="profile.html">Profile</a></li>
-        <li><a href="interest.html">Interest</a></li>
         <li><a href="achievement.html">Achievement</a></li>
+        <li><a href="interest.html">Interest</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="gallery.html">Gallery</a></li>
       </ul>
@@ -133,7 +133,7 @@ body {
  <section class="resume">
   <img src="portfolio.png" alt="Resume Icon" class="resume-img">
   <p>Click the link below to view my resume:</p>
-  <a href="Resume_IzyanF.pdf">Izyan's Resume</a>
+  <a href="Resume_IzyanF.pdf" target="_blank">Izyan's Resume</a>
   <footer class="resume-footer">
      <p>&copy; 2024 Yanprsh.</p>
      </footer>
@@ -143,3 +143,6 @@ body {
       
   </body>
 </html>
+
+ 
+      
