--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       transform: translateY(-5px);
       }
       
+      
     .home {
       width: 100%;
       height: 100vh;
@@ -168,9 +169,9 @@
       <h3>Student</h3>
       <p>Yo! I'm a student based in Sarawak. Lets keep in touch by connecting with my socials below</p>
       <div class="socials-icons">
-        <a href="https://www.instagram.com/yanprsh/"><i class="ph-bold ph-instagram-logo"></i></a>
-        <a href="https://www.linkedin.com/in/izyan-farhana/"><i class="ph-bold ph-linkedin-logo"></i></a>
-        <a href="https://vsco.co/yawliao/gallery"><i class="ph-bold ph-fish"></i></a>
+        <a href="https://www.instagram.com/yanprsh/" target="_blank"><i class="ph-bold ph-instagram-logo"></i></a>
+        <a href="https://www.linkedin.com/in/izyan-farhana/" target="_blank"><i class="ph-bold ph-linkedin-logo"></i></a>
+        <a href="https://vsco.co/yanprshh/gallery" target="_blank"><i class="ph-bold ph-fish"></i></a>
       </div>
     </div>
   </section>
